[package]
name = "rsa_rt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
num-bigint = {version = "0.4.3", features = ["rand"]}
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"
requestty = "0.5.0"
serde = {version = "1.0.163", features = ["derive"]}
serde_bytes = "0.11.9"
serde_derive = "1.0.163"
serde_json = "1.0.96"
